<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="com.lcworld.module_order.viewmodel.PaymentResultViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <!--标题-->
        <com.qmuiteam.qmui.widget.QMUITopBarLayout
                android:id="@+id/qmui_topbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <View
                android:id="@+id/bg_result"
                android:layout_width="0dp"
                android:background="@color/white"
                android:layout_marginTop="@dimen/gap_size6"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="360:233"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/qmui_topbar"/>

        <ImageView
                android:id="@+id/iv_picture"
                android:layout_width="wrap_content"
                android:src="@mipmap/order_payment_result_success"
                app:layout_constraintBottom_toTopOf="@id/tv_result"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/tv_result"
                android:textSize="@dimen/tx_size15"
                android:textColor="@color/tx_colorc"
                android:layout_width="wrap_content"
                android:text="@string/order_tip_payment_result_success"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_size14"
                app:layout_constraintBottom_toTopOf="@id/btn_seelater"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_picture"/>

        <Button
                android:id="@+id/btn_seelater"
                android:layout_width="0dp"
                android:text="@string/order_payment_seelater"
                android:textSize="@dimen/tx_size15"
                android:textColor="@color/tx_colorc"
                android:layout_marginTop="37dp"
                android:background="@drawable/selector_btnbg_b"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/bg_result"
                app:layout_constraintDimensionRatio="137:40"
                app:layout_constraintEnd_toStartOf="@id/btn_vieworder"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_result"
                app:layout_constraintWidth_percent="0.38"/>

        <Button
                android:id="@+id/btn_vieworder"
                android:layout_width="0dp"
                android:text="@string/order_payment_vieworder"
                android:layout_marginStart="40dp"
                android:textSize="@dimen/tx_size15"
                android:textColor="@color/tx_colorf"
                android:background="@drawable/selector_btnbg_a"
                android:layout_height="0dp"
                app:layout_constraintBaseline_toBaselineOf="@id/btn_seelater"
                app:layout_constraintDimensionRatio="137:40"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_seelater"
                app:layout_constraintWidth_percent="0.38"/>
    </android.support.constraint.ConstraintLayout>
</layout>
